EsaSkyNumberBoxes and Control now has max and min number capabilities
git-svn-id: https://satscm.esac.esa.int/esasky/esasky-app/trunk@3485 aa7853a0-da02-4334-bf23-07ffea9f4f01